@@ -13,6 +13,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	Niki Denev
 	- maildirquota.c: Remove double free() and fix use of free'd
 	  memory in docheckquota(). [1101316]
+	- contrib/qmail-maildir++.patch: same fix as for maildirquota.c.
 
 5.4.9 - released 26-Dec-04
 
